Criado a lista de lições com 10 itens

--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
       <img id="minha_foto" src="img/104f3ac6-0e37-4b36-9543-6d8cc515c2d8.jpg" alt="Foto de um Homem segurando um bebê">
       <a href="https://www.linkedin.com/in/andre-chiapetta" target="_blank">André Chiapetta</a>
     </section>
+    <section>
+      <ol id="licoes_aprendidas">
+        <h2>Lições aprendidas</h2>
+        <li>lição</li>
+        <li>lição</li>
+        <li>lição</li>
+        <li>lição</li>
+        <li>lição</li>
+        <li>lição</li>
+        <li>lição</li>
+        <li>lição</li>
+        <li>lição</li>
+        <li>lição</li>
+      </ol>
+    </section>
     </main>
 </body>
 </html>
