criado lista de lições a aprender

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header id="cabecalho">
-    <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+    <h1 id="titulo">Lições da - Trybe!</h1>
   </header>
   <main>
     <section>
@@ -16,19 +16,37 @@
       <a href="https://www.linkedin.com/in/andre-chiapetta" target="_blank">André Chiapetta</a>
     </section>
     <section>
-      <ol id="licoes_aprendidas">
-        <h2>Lições aprendidas</h2>
-        <li>lição</li>
-        <li>lição</li>
-        <li>lição</li>
-        <li>lição</li>
-        <li>lição</li>
-        <li>lição</li>
-        <li>lição</li>
-        <li>lição</li>
-        <li>lição</li>
-        <li>lição</li>
-      </ol>
+      <h2>Lições</h2>
+      <article>
+        <h3>Lições aprendidas</h3>
+        <ol id="licoes_aprendidas">
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+        </ol>
+      </article>
+      <article>
+        <h3>Lições a aprender</h3>
+        <ul id="licoes_a_aprender">
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+          <li>lição</li>
+        </ul>
+      </article>
     </section>
     </main>
 </body>
