--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </article>
           <section id="learned_lessons" class="lado-esquerdo">
             <h3>Lições aprendidas</h3>
-            <ol>
+            <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Bash</li>
             <li>Shell</li>
@@ -43,7 +43,7 @@
           </section>
           <section id="lessons_to_learn" class="lado-direito">
           <h3>Lições a aprender</h3>
-          <ul>
+          <ul id="licoes_a_aprender">
             <li>JavaScript</li>
             <li>DOM</li>
             <li>Forms</li>
