--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
           </ul>
         </nav>
       </section>
+     <table id="tabela" > 
+         <caption>A tabela</caption>
+         <tr>
+             <td>Alguma coisa</td>
+             <td>Outra coisa</td>
+         </tr>
+         <tr>
+             <td>Coisa a mais</td>
+             <td>Coisa a menos</td>
+         </tr>
+
+     </table> 
     <article>
         <h4>Artigo sobre o aprendizado</h4>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque veritatis adipisci illo cumque eveniet libero, fuga, asperiores consectetur sit? Atque Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque </p>
