--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <h1 id="titulo">The Road So Far</h1>
     </header>
     <main>
-        <img id="minha_foto" src="pics/profile-pic.jpeg" alt="Minha foto de perfil">
         <div class="lessons">
             <section>
                 <div class="lado-esquerdo">
@@ -99,11 +98,20 @@
         </aside>
     </main>
     <footer id="rodape">
-        <h3>Compilado por Raquel Picanço</h3>
-        <nav>
-            <a href="https://github.com/rach-vp" target="_blank">Github</a>
-            <a href="https://www.linkedin.com/in/raquel-pican%C3%A7o-384736107/" target="_blank">Linkedin</a>
-        </nav>
+        <div class="footer-content-wrapper">
+            <h3 class="vertical-centralizer">Compilado por Raquel Picanço</h3>
+            <img class="vertical-centralizer" id="minha_foto" src="pics/profile-pic.jpeg" alt="Minha foto de perfil">
+        </div>
+        <div class="footer-content-wrapper right-footer-content">
+            <nav>
+                <div>
+                    <img class="social-media-icon" src="pics/github-9-512.png" alt="Ícone do Github"><a href="https://github.com/rach-vp" target="_blank">Github</a>
+                </div>
+                <div>
+                    <img class="social-media-icon" src="pics/linkedin-3-512.png" alt="Ícone do Linkedin"><a href="https://www.linkedin.com/in/raquel-pican%C3%A7o-384736107/" target="_blank">Linkedin</a>
+                </div>
+            </nav>
+        </div>
     </footer>
 </body>
 </html>
