Finishing Requisite #10 to #15 - GOGO Tryber

--- a/index.html
+++ b/index.html
@@ -12,30 +12,36 @@
     </header>
     <img src="pablo.jpeg" alt="foto de uma pessoa" id="minha_foto">
     <section>
-        <ol id="licoes_aprendidas">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>GIT</li>
-            <li>GitHub</li>
-            <li>Softskills Empathy</li>
-            <li>Softskills Learning some emotions</li>
-            <li>Softskills Emotional Management</li>
-            <li>Softskills Time Management</li>
-            <li>Softskills Priority Definitions</li>
-            <li>Who is Pharaooooo!!</li>
-        </ol>
-        <ul id="licoes_a_aprender">
-            <li>Javascript</li>
-            <li>Frameworks</li>
-            <li>Computer Science</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Softskills Learning emotions</li>
-            <li>Softskills Emotional and Reaction Management</li>
-            <li>Softskills Time Management</li>
-            <li>Softskills Priority Definitions</li>
-            <li>Softskills Empathy</li>
-        </ul>
+        <article>
+            <h4>Lições Aprendidas</h4>
+            <ol id="licoes_aprendidas">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>GIT</li>
+                <li>GitHub</li>
+                <li>Softskills Empathy</li>
+                <li>Softskills Learning some emotions</li>
+                <li>Softskills Emotional Management</li>
+                <li>Softskills Time Management</li>
+                <li>Softskills Priority Definitions</li>
+                <li>Who is Pharaooooo!!</li>
+            </ol>
+        </article>
+        <article>
+            <h4>Lições a Aprender</h4>
+            <ul id="licoes_a_aprender">
+                <li>Javascript</li>
+                <li>Frameworks</li>
+                <li>Computer Science</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Softskills Learning emotions</li>
+                <li>Softskills Emotional and Reaction Management</li>
+                <li>Softskills Time Management</li>
+                <li>Softskills Priority Definitions</li>
+                <li>Softskills Empathy</li>
+            </ul>
+        </article>
     </section>
     <article class="lado-esquerdo">
         <p>Aprendendo a aprender - Go Tryber</p>
@@ -45,7 +51,7 @@
         <p>When I've heard of Trybe for first time, I was unbeliver. I thought that they were something like hijacking. But when I studied deeper the people who work here, I convince myself that my future was here.Today, I'm studying hard to become a elite software develop with Trybe help.</p>
     </aside>
     <table>
-        <body>
+        <caption>My Test Table</caption>
             <tr>
                 <td>data 1 - row 1</td>
                 <td>data 2 - row 1</td>
@@ -54,9 +60,8 @@
                 <td>data 1 - row 2</td>
                 <td>data 2 - row 2</td>
             </tr>
-        </body>
     </table>
-    <nav id="links-importantes">
+    <nav id="links_importantes">
         <a href="https://trybe.com.br" target="_blank"> Clique here to meet who is making this magic happen.</a>
     </nav>
     <footer id="rodape">
