Resolvendo CodeClimate parte final

--- a/index.html
+++ b/index.html
@@ -59,9 +59,48 @@
       </section>
       <aside id="first-project">
         <h3>Primeiro Projeto</h3>
-        <p>Está sendo muito legal colocar o aprendizado em prática, o projeto ajuda a reforçar os temas além de nos colocar em prática com o Git</p>
+        <p>Está sendo muito legal colocar o aprendizado em prática, o projeto ajuda a reforçar os temas além de nos colocar em uso diário com o Git e gitHub.</p>
+        <h3>Tabela alguns comandos básicos terminal <span class="red">Linux</span></h3>
+        <table id="table">
+          <thead>
+            <tr>
+              <th>Comandos no bash</th>
+              <th>Descrição</th>
+            </tr>
+            <tbody>
+              <tr>
+                <td>ls</td>
+                <td>listar arquivos</td>
+              </tr>
+              <tr>
+                <td>cd</td>
+                <td>change directory</td>
+              </tr>
+              <tr>
+                <td>mkdir</td>
+                <td>make directory</td>
+              </tr>
+              <tr>
+                <td>cp</td>
+                <td>copy file</td>
+              </tr>
+              <tr>
+                <td>mv</td>
+                <td>move a file</td>
+              </tr>
+              <tr>
+                <td>rm</td>
+                <td>remove file</td>
+              </tr>
+              <tr>
+                <td>rmdir</td>
+                <td>remove directory</td>
+              </tr>
+            </tbody>
+          </thead>
+        </table>
       </aside>
-      <footer id="rodape">
+      <footer id="footer">
         <div id="contacts">
 					<h4>Ivan Rafael</h4>
 					<nav>
