--- a/index.html
+++ b/index.html
@@ -12,36 +12,34 @@
     </header>
     <img src="pablo.jpeg" alt="foto de uma pessoa" id="minha_foto">
     <section>
-        <article>
-            <h4>Lições Aprendidas</h4>
-            <ol id="licoes_aprendidas">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>GIT</li>
-                <li>GitHub</li>
-                <li>Softskills Empathy</li>
-                <li>Softskills Learning some emotions</li>
-                <li>Softskills Emotional Management</li>
-                <li>Softskills Time Management</li>
-                <li>Softskills Priority Definitions</li>
-                <li>Who is Pharaooooo!!</li>
-            </ol>
-        </article>
-        <article>
-            <h4>Lições a Aprender</h4>
-            <ul id="licoes_a_aprender">
-                <li>Javascript</li>
-                <li>Frameworks</li>
-                <li>Computer Science</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>Softskills Learning emotions</li>
-                <li>Softskills Emotional and Reaction Management</li>
-                <li>Softskills Time Management</li>
-                <li>Softskills Priority Definitions</li>
-                <li>Softskills Empathy</li>
-            </ul>
-        </article>
+        <h4>Lições Aprendidas</h4>
+        <ol id="licoes_aprendidas">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>GIT</li>
+            <li>GitHub</li>
+            <li>Softskills Empathy</li>
+            <li>Softskills Learning some emotions</li>
+            <li>Softskills Emotional Management</li>
+            <li>Softskills Time Management</li>
+            <li>Softskills Priority Definitions</li>
+            <li>Who is Pharaooooo!!</li>
+        </ol>
+    </section>
+    <section>
+        <h4>Lições a Aprender</h4>
+        <ul id="licoes_a_aprender">
+            <li>Javascript</li>
+            <li>Frameworks</li>
+            <li>Computer Science</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Softskills Learning emotions</li>
+            <li>Softskills Emotional and Reaction Management</li>
+            <li>Softskills Time Management</li>
+            <li>Softskills Priority Definitions</li>
+            <li>Softskills Empathy</li>
+        </ul>
     </section>
     <article class="lado-esquerdo">
         <p>Aprendendo a aprender - Go Tryber</p>
