--- a/index.html
+++ b/index.html
@@ -19,36 +19,71 @@
     <section>
       <img id="minha_foto" src="dani.png" alt="Fodo de perfil de uma pessoa" width="200">
     </section>
-    <section class="aprendidas">
-      <h2>Lições aprendidas</h2>
-      <ol id="licoes_aprendidas">
-        <li>Unix & Bash</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Como a Internet Funciona</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>HTML Semântico</li>
-        <li>Inspect</li>
-        <li>Zoom</li>
-        <li>Slido</li>
-      </ol>
-    </section>
-    <section class="aprender">
-      <h2>Lições a aprender</h2>
-      <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>DOM</li>
-        <li>CSS Responsivo</li>
-        <li>JavaScript ES6</li>
-        <li>React</li>
-        <li>Metodologias Àgeis</li>
-        <li>Redux</li>
-        <li>SQL</li>
-        <li>MongoDB</li>
-        <li>NodeJS</li>
-      </ul>
-    </section>
+    <div id="big-section">
+      <section class="aprendidas">
+        <h2>Lições aprendidas</h2>
+        <ol id="licoes_aprendidas">
+          <li>Unix & Bash</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>Como a Internet Funciona</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>HTML Semântico</li>
+          <li>Inspect</li>
+          <li>Zoom</li>
+          <li>Slido</li>
+        </ol>
+      </section>
+      <section class="aprender">
+        <h2>Lições a aprender</h2>
+        <ul id="licoes_a_aprender">
+          <li>JavaScript</li>
+          <li>DOM</li>
+          <li>CSS Responsivo</li>
+          <li>JavaScript ES6</li>
+          <li>React</li>
+          <li>Metodologias Àgeis</li>
+          <li>Redux</li>
+          <li>SQL</li>
+          <li>MongoDB</li>
+          <li>NodeJS</li>
+        </ul>
+      </section>
+          <section id="table">
+        <h2>Tabela de Soft e Hard Skills</h2>
+        <table>
+          <tr>
+            <th>Soft Skillk</th>
+            <th>Hard Skills</th>
+          </tr>
+          <tr>
+            <td>Empatia</td>
+            <td>HTML</td>
+          </tr>
+          <tr>
+            <td>Comunicação</td>
+            <td>CSS</td>
+          </tr>
+          <tr>
+            <td>Criatividade</td>
+            <td>Java Script</td>
+          </tr>
+          <tr>
+            <td>Trabalho em equipe</td>
+            <td>SQL</td>
+          </tr>
+          <tr>
+            <td>Resiliência</td>
+            <td>MongoDB</td>
+          </tr>
+          <tr>
+            <td>Proatividade</td>
+            <td>NodeJS</td>
+          </tr>
+        </table>
+      </section>
+    </div>
     <section class="lado-esquerdo">
       <article class="artigo">
         <h2>Sobre o meu aprenizado</h2>
@@ -60,15 +95,6 @@
         <h2>O caminho...</h2>
         <p>A primeira vez que vi sobre Git e GitHub, confesso que fiquei meio preocupada em como eu iria aprender e lembrar de tudo, isso foi antes da Trybe, agora com as aulas e o conteúdo, ficou bem mais fácil de assimilar e a prática do dia a dia ajuda bastante também.</p>
       </aside>
-    </section>
-    <section id="table">
-      <table>
-        <tr>
-          <td>Daniela</td>
-          <td>Muller</td>
-          <td>29 anos</td>
-        </tr>
-      </table>
     </section>
   </main>
   <footer id="rodape">
