--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous"/>
   <link rel="stylesheet" href="style.css">
   <title>Lessons Learned</title>
 </head>
@@ -40,7 +41,14 @@
     </ul>
   </main>
   <footer id="rodape">
-      <small>Desenvolvido por <strong>Enio Nicael</strong></small>
+      <ul>
+          <li>
+            <a href="https://www.linkedin.com/in/enio-nicael/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+          </li>
+          <li>
+            <a href="https://github.com/EnioNicael" target="_blank"><i class="fab fa-github"></i></a>
+          </li>
+      </ul>
   </footer>
 </body>
 </html>
