Finishing Requisite #10 to #15 - GOGO Tryber

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <img src="pablo.jpeg" alt="foto de uma pessoa" id="minha_foto">
     <section>
-        <h4>Lições Aprendidas</h4>
+        <p> <bold>Lições Aprendidas e a Aprender</bold></h3>
         <ol id="licoes_aprendidas">
             <li>HTML</li>
             <li>CSS</li>
@@ -25,9 +25,6 @@
             <li>Softskills Priority Definitions</li>
             <li>Who is Pharaooooo!!</li>
         </ol>
-    </section>
-    <section>
-        <h4>Lições a Aprender</h4>
         <ul id="licoes_a_aprender">
             <li>Javascript</li>
             <li>Frameworks</li>
@@ -49,7 +46,6 @@
         <p>When I've heard of Trybe for first time, I was unbeliver. I thought that they were something like hijacking. But when I studied deeper the people who work here, I convince myself that my future was here.Today, I'm studying hard to become a elite software develop with Trybe help.</p>
     </aside>
     <table>
-        <caption>My Test Table</caption>
             <tr>
                 <td>data 1 - row 1</td>
                 <td>data 2 - row 1</td>
