--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
   <main>
     <section id="aluno_trybe">
 
-        <img id="foto_aluno" src="/images/leo-pic.png" alt="Foto de Leonardo Majevski">
+      <figure>
+        <img id="minha_foto" src="/images/leo-pic.png" alt="Foto de Leonardo Majevski">
+        <figcaption>Leonardo Majevski</figcaption>
+      </figure>
 
       <aside>
         <h3>#beTrybe!</h3>
@@ -104,7 +107,7 @@
       <tr>
         <td>Neste módulo, você vai aprender como desenvolver um código de back-end robusto, limpo, escalável e seguro, dominando o uso de bancos de dados, a construção de APIs com testes automatizados.</td>
         <td>Aqui, você aprenderá os principais conceitos da Ciência da Computação que são aplicados no dia a dia do desenvolvomento de software e como transformar a teoria em prática, analisando algoritmos e escolhendo as melhores estruturas de dados para resolver os problemas!</td>
-        </tr>
+      </tr>
     </table>
     
     <table>
