passando no achecker

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav>
             <table>
                 <tr>
-                    <tr>Portfolio</tr>
-                    <tr>Git Hub</tr>
+                    <tr><h2>Portfolio</h2></tr>
+                    <tr><h2>Git Hub</h2></tr>
                 </tr>
             </table>
         </nav>
@@ -57,7 +57,7 @@
             </aside>
         </section>
     </main>
-    <footer id="rodape"><h4>Todos os direitos reservados, <a href="https://tiagopaz2000.github.io/portfolio/" target="_blank">Tiago Paz</a></h4></footer>
+    <footer id="rodape"><h3>Todos os direitos reservados, <a href="https://tiagopaz2000.github.io/portfolio/" target="_blank">Tiago Paz</a></h3></footer>
 
 </body>
 </html>
