Corrigindo issues do Code Climate

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </section>
     <hr>
 
-    <article id="trybe_aprendizado">
+    <article class="lado-esquerdo">
       <h3>O aprendizado na Trybe</h3>
       <p>
         Poder aprender a programar com a Trybe é sem sombra de dúvidas a melhor opção que um estudante pode ter. Tenho certeza que o comprometimento da Trybe ao fornecer as melhores práticas de ensino direcionadas para o mercado de trabalho é um dos fatores que mais vão influenciar no meu sucesso como aluno e posteriormente como um desenvolvedor.
@@ -80,7 +80,7 @@
     </article>
     <hr>
 
-    <aside id="estudante_hoje">
+    <aside class="lado-direito">
       <h3>O estudante de programação hoje</h3>
       <p>
         Sou estudante de Análise e Desenvolvimento de Sistemas em uma faculdade tradicional e vejo como o ensino brasileiro está defasado e precisando de direcionamento pro mercado de trabalho assim como a Trybe faz.
@@ -118,7 +118,6 @@
         <td>Para que você consiga as melhores oportunidades, você deve também desenvolver habilidades de comunicação, postura, convivência social, etc. Vamos te guiar nas melhores práticas e assim você vai se dar muito melhor na vida real!</td>
       </tr>
     </table>
-
 
     <footer id="rodape">
       <p><i class="fas fa-code"></i> por Leonardo Majevski &copy; 2020</p>
