--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <nav>
             <header id="cabecalho">
-                <h1 id="titulo">Lucas Silva - DEV</h1>
+                <h1 id="titulo"> Lessons Learned</h1>
             </header>
             <ul id="nav-btn">
                 <li><a href="#">Home</a></li>
@@ -27,6 +27,21 @@
                 <div id="hero-card">
                   <img id="minha_foto" src="img/hero.jpeg" alt="hero">
                 </div>
+            </section>
+
+            <section>
+                <ol id="licoes_aprendidas">
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>Terminal Linux</li>
+                    <li>Internet</li>
+                    <li>HTML Semântio</li>
+                    <li>CSS</li>
+                    <li>Noção de Banco de Dados</li>
+                    <li>O que é IP</li>
+                    <li>Soft Skills</li>
+                    <li>Noção de Rede de Internet</li>
+                </ol>
             </section>
         </main>
     </body>
