Posiciona main e corrige alguns CC

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header id="cabecalho">
         <h1 id="titulo">The Road So Far</h1>
     </header>
-    <main>
+    <main class="main-content">
         <div class="lessons">
             <section>
                 <div class="lado-esquerdo">
@@ -30,7 +30,7 @@
                         <li>Reuniões no Zoom</li>
                         <li>Desenvolvimento de soft skills</li>
                         <li>Desenvolvimento do lado designer</li>
-                        <li>Descobrimos quem é o Faraó</li>
+                        <li>Aprendemos sobre os líderes do Antigo Egito</li>
                         <li>Aprendemos a nos questionar que animal seríamos</li>
                     </ol>
                 </div>
