Adicao de artigo sobre meu aprendizado

--- a/index.html
+++ b/index.html
@@ -39,16 +39,22 @@
       <li>Estrutura de dados</li>
       <li>Trabalho em equipe</li>
     </ul>
+    <article>
+      <h2>Primeiras semanas</h2>
+      <p>Até aqui foram duas semanas intensas de muito estudo e aprendizagem
+        onde aprendi habilidades que fazem parte de um processo ascendente pensado
+        e focado em um aprendizado gradual, aprendi a usar o Bash, Git e GitHub ferramentas essenciais
+        para um programador construir uma base sólida, então comecei a dar
+        os primeiros passos no desenvolvimento Web, aprendendo HTML e CSS.
+        O processo de aprendizagem é bem consistente, através de aulas síncronas, assíncronas,
+        plantões de ajuda e muita prática.</p>
+    </article>
   </main>
   <footer id="rodape">
-      <ul>
-          <li>
-            <a href="https://www.linkedin.com/in/enio-nicael/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-          </li>
-          <li>
-            <a href="https://github.com/EnioNicael" target="_blank"><i class="fab fa-github"></i></a>
-          </li>
-      </ul>
+    <ul>
+      <li><a href="https://www.linkedin.com/in/enio-nicael/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+      <li><a href="https://github.com/EnioNicael" target="_blank"><i class="fab fa-github"></i></a></li>
+    </ul>
   </footer>
 </body>
 </html>
