--- a/index.html
+++ b/index.html
@@ -42,7 +42,20 @@
                     <li>Soft Skills</li>
                     <li>Noção de Rede de Internet</li>
                 </ol>
+                <ol id="licoes_a_aprender">
+                    <li>JavaScript</li>
+                    <li>React</li>
+                    <li>Design responsivo</li>
+                    <li>Frameworks</li>
+                    <li>Testes automatizados</li>
+                    <li>Algoritmos</li>
+                    <li>Lógica de Programação</li>
+                    <li>Mais sobre Soft Skills</li>
+                    <li>Estrutura de Dados</li>
+                    <li>POO</li>
+                </ol>
             </section>
+
         </main>
     </body>
 </html>
