--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                 </ol>
             </section>
 
+            <footer id="rodape">
+                <p>By Lucas Silva</p>
+            </footer>
+
         </main>
     </body>
 </html>
