--- a/index.html
+++ b/index.html
@@ -46,19 +46,18 @@
   </article>
   <article div="aprendizado">
       <p>
-        My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!
-      </p>
-      <section>
-        <aside>
-          <p>The Epcot center is a theme park at World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
-        </aside>
-      </section>
-      <p>
-        The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events, international pavilions, award-winning fireworks and seasonal special events.
-      </p>
-      <p>
-        My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!
-        My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!
+        Estudar na Trybe tem sido desafiador, a forma como nos apresentam o conteúdo, a atenção de todos os envolvidos e o material que nos instrui é excelente.
+
+        <section>
+          <aside>
+            <p>O primeiro projeto vimos o processo de validação, como ele é bem criterioso, precisamos treinar para conseguir resolver as pendências.</p>
+          </aside>
+        </section>
+
+        Já aprendi sobre as caracteristicas das emoções, trabalhando a soft skill, o programa inclui um atendimento com especialista na área da psicologia para os alunos melhorarem seu emocinal.
+
+        O curso tem muitas matérias muito boas. Começamos com dois dias de muita integração.
+        As matérias que virão são muito boas, vou deixar algumas aqui, JavaScript, Nodejs, Reacth,  além de softskill, princípio da ciencia da computação.
       </p>
   </article>
   <table id="tabela">
