--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <section>
                 <div id="hero-card">
                   <img id="minha_foto" src="img/hero.jpeg" alt="hero">
+                  <p>Oi, eu sou o Lucas</p>
                 </div>
             </section>
 
