--- a/index.html
+++ b/index.html
@@ -15,5 +15,58 @@
             <a target="_blank" href="https://linkedin.com/in/pedrotoselli">Linkedin</a>
         </nav>
     </header>
+    <main>
+        <img src="imagens/toselli.jpg" width="160px" alt="Foto de Pedro Toselli" id="minha_foto">
+        <div class="listas">
+            <div class="lista-ordenada">
+                <h3>Lições aprendidas</h3>
+                <ol>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Unix</li>
+                    <li>Bash</li>
+                    <li>Linkedin</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>Semântica</li>
+                    <li>Outline</li>
+                    <li>IE</li>
+                </ol>
+            </div>
+            <div class="lista-desordenada">
+                <h3>Lições a aprender</h3>
+                <ul>
+                    <li>Mover itens em CSS</li>
+                    <li>Python</li>
+                    <li>Java Script</li>
+                    <li>Mais sobre HTML</li>
+                    <li>Mais sobre CSS</li>
+                    <li>Programação de jogos</li>
+                    <li>Fazer miojo</li>
+                    <li>Alinhar itens lado a lado</li>
+                    <li>Design web</li>
+                    <li>Como nao ficar triste</li>
+                </ul>
+            </div>
+        </div>
+    </main>
+    <div class="artigo">
+        <article>
+            <div class="aprendizado">
+                <h1>Meu aprendizado ate aqui</h1>
+                <p>Sei que estou no começo ainda, e sei também que já aprendi mais do que semana passada, <br> mas ainda fico chateado em saber que ainda nao consigo nem sequer alinhar uma coluna lado a lado, enquanto meus colegas ja fizeram templates absurdos</p>
+            </div>
+            <aside>
+                <div class="caminhada">
+                    <h1>Meu trajeto até aqui</h1>
+                    <p>Bom, esse é literalmente meu primeiro contato com a programação, estou gostando muito, porem fico chateado quando nao consigo algo simples. Mas no fim tudo da certo.</p>
+                </div>
+            </aside>
+        </article>
+    </div>
+    <footer id="rodape">
+        <p id="dev-name">Este site foi criado e desenvolvido por Pedro Toselli</p>
+        <a target="_blank" href="https://linkedin.com/in/pedrotoselli"><i class="fab fa-linkedin"></i></a>
+    </footer>
 </body>
 </html>
