projeto quase concluido

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </aside>
         </section>
       </main>
-      <footer class="rodape">
+      <footer id="rodape">
         <p>Todos direitos reservados, Igor Machado</p>
         <a href="https://github.com/igormachado" target="_blank">Acesse meu <strong>Github</strong> para conhecer outros projetos</a>
       </footer>
