Adicao de sessao com aside

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         O processo de aprendizagem é bem consistente, através de aulas síncronas, assíncronas,
         plantões de ajuda e muita prática.</p>
     </article>
+    <aside>
+      <h2>Softskills</h2>
+      <p>Um ponto muito interessante que eu gostei muito foi sobre aprender softskills, que envolve o lado humano do aluno e não apenas habilidades técnicas. Habilidades
+         essenciais para uma boa convivência não só em abientes profissionais, mas também no
+         dia a dia.</p>
+    </aside>
   </main>
   <footer id="rodape">
     <ul>
