--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1 id="titulo">Lições aprendidas - TRYBE</h1>
       </header>
       <section id="section-foto">
-        <img id="foto" src="me.png" alt="Igor Machado"/>
+        <img id="minha-foto" src="me.png" alt="Igor Machado"/>
         <p><strong>Igor Machado</strong></p>
       </section>
 
@@ -50,7 +50,7 @@
             <p>Estou a pouco tempo , porém o curso é muito bom. Oferencedo uma excelente didática
               professores que sabem dar uma aula acima da espectativa. Com isso o aprendizado se torna
               agradável e com progressos significativos. Com menos de um mês já estou fazendo o meu primeiro
-              projeto.
+              projeto. Espero em breve ser um excelente Dev FullStack.
             </p>
           </article>
         </section>
@@ -60,7 +60,8 @@
             <h2>Uma passagem sobre o meu aprendizado</h2>
             <p>Estou aprendendo tantas coisas que fica até difícil definir uma.
               A passagem que chama a minha atenção é sobre as soft skills de inteligência emocial,
-              pois quando mais eu souber sobre mim melhor pessoa serei.
+              pois quando mais eu souber sobre mim melhor pessoa serei. Sabendo disso, terei uma gama
+              de expertise para lidar nos momentos de pressão em uma empresa.
             </p>
           </aside>
         </section>
