--- a/index.html
+++ b/index.html
@@ -2,65 +2,73 @@
 <html lang="br">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Lições Trybe</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header id="cabecalho">
+ <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe</h1>
         <nav>
             <a href="#cabecalho">Home</a>
             <a href="#main">Main</a>
             <a href="#rodape">About</a>
         </nav>
-    </header>
-    <main id="main">
-    <h2>Lições aprendidas</h2>
-    <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Shell</li>
-        <li>Bash</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Slack</li>
-        <li>Zoom</li>
-        <li>Semantic HTML</li>
-    </ol>
-    <h2>Lições para aprender</h2>
-    <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>DOM</li>
-        <li>Web Storage</li>
-        <li>CSS Flexbox</li>
-        <li>CSS Responsivo</li>
-        <li>Jest</li>
-        <li>React</li>
-        <li>NodeJS</li>
-        <li>Deployment</li>
-        <li>Python</li>
-    </ul>
-    <article>
-        <header>
-            <h2>O meu aprendizado na Trybe</h2>
-        </header>
-        <p>Muito alem de adquirir uma nova habilidade o aprendizado na Trybe proporciona um modelo de formação inovador e disruptivo.-
-            São rotinas que impulsionam o ânimo turma, tornam o estudo algo muito mais prazeroso e que geram resultados incríveis.-
-            Essa metodologia nos coloca como protagonistas e responsáveis por nosso próprio aprendizado, uma educação ativa que acontece-
-            através de diversos exercícios, projetos, dinâmicas e muitos outros formatos.</p>
-    </article>
-    </main>
-     <aside>
-        <h4>Empatia</h4>
+ </header>
+ <main id="conteudo_principal">
+        <article>
+            <header>
+                <h2>O meu aprendizado na Trybe</h2>
+            </header>
+            <p>Muito alem de adquirir uma nova habilidade o aprendizado na Trybe proporciona um modelo de formação inovador e disruptivo.-
+                São rotinas que impulsionam o ânimo turma, tornam o estudo algo muito mais prazeroso e que geram resultados incríveis.-
+                Essa metodologia nos coloca como protagonistas e responsáveis por nosso próprio aprendizado, uma educação ativa que acontece-
+                através de diversos exercícios, projetos, dinâmicas e muitos outros formatos.</p>
+        </article>
+        <section>
+            <div class="lista_licoes" id="apredidas">
+            <h3>Lições aprendidas</h3>
+            <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Shell</li>
+                <li>Bash</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Slack</li>
+                <li>Zoom</li>
+                <li>Semantic HTML</li>
+            </ol>
+        </div>
+        <div class="lista_licoes" id="aprender">
+            <h3>Lições para aprender</h3>
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>Web Storage</li>
+                <li>CSS Flexbox</li>
+                <li>CSS Responsivo</li>
+                <li>Jest</li>
+                <li>React</li>
+                <li>NodeJS</li>
+                <li>Deployment</li>
+                <li>Python</li>
+            </ul>
+        </div>
+        </section>
+        
+ </main>
+ <section id="conteudo_extra">
+        <aside id="licoes">
+         <h4>Empatia</h4>
         <p>A capacidade de projetar a personalidade de alguém de maneira que seja possível se identificar-
              com o outro e compreender o que este pensa e sente. No ambiente corporativo está virtude contribui-
              na gestão de equipes e influencia positivamente o clima organizacional.</p>
-        </aside>
-    <footer id="rodape">
-        Project Lessons Learned - SD09<br>
-        <a href="https://www.linkedin.com/in/micaelaalves/" target="_blank">Micaela Alves</a>
+    </aside>
+ </section>
+ <footer id="rodape">
+        <p>Project Lessons Learned - Desenvolvido por <a href="https://www.linkedin.com/in/micaelaalves/" target="_blank">Micaela Alves</a> </p>
         <img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Micaela">
-    </footer>
+ </footer>
 </body>
 </html>
