--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
     <main>
         <img src="imagens/toselli.jpg" width="160px" alt="Foto de Pedro Toselli" id="minha_foto">
         <div class="listas">
+            <div class="tabela">
+                <table border="3">
+                    <tr>
+                        <td>Nome</td>
+                        <td>Idade</td>
+                        <td>Profissão</td>
+                    </tr>
+                    <tr>
+                        <td>Pedro</td>
+                        <td>20</td>
+                        <td>Estudante</td>
+                    </tr>
+                </table>
+            </div>
             <div class="lista-ordenada">
                 <h3>Lições aprendidas</h3>
                 <ol>
@@ -50,11 +64,11 @@
             </div>
         </div>
     </main>
-    <div class="artigo">
+    <section class="artigo">
         <article>
             <div class="aprendizado">
                 <h1>Meu aprendizado ate aqui</h1>
-                <p>Sei que estou no começo ainda, e sei também que já aprendi mais do que semana passada, <br> mas ainda fico chateado em saber que ainda nao consigo nem sequer alinhar uma coluna lado a lado, enquanto meus colegas ja fizeram templates absurdos</p>
+                <p>Sei que estou no começo ainda, e sei também que já aprendi mais do que semana passada, <br> mas ainda fico chateado em saber que ainda nao consigo nem sequer alinhar uma coluna lado a lado, enquanto meus colegas ja fizeram templates absurdos. O que mais me deixa feliz é que estou tendo a oportunidade de melhorar sempre.</p>
             </div>
             <aside>
                 <div class="caminhada">
@@ -63,7 +77,7 @@
                 </div>
             </aside>
         </article>
-    </div>
+    </section>
     <footer id="rodape">
         <p id="dev-name">Este site foi criado e desenvolvido por Pedro Toselli</p>
         <a target="_blank" href="https://linkedin.com/in/pedrotoselli"><i class="fab fa-linkedin"></i></a>
