Corrigindo os erros

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href=""></a>Fotografia</li>
       </ul>
     </nav>
+
   </header>
 
   <div class="box">
@@ -33,7 +34,9 @@
   <section id="secao-skills">
 
     <nav class="skills">
+
       <h3>Lições aprendidas</h3>
+
       <ol id="licoes_aprendidas">
         <li>Terminal Shell</li>
         <li>Git</li>
@@ -46,9 +49,12 @@
         <li>O stomatopoda</li>
         <li>Projeto</li>
       </ol>
+
     </nav>
+
     <nav class="skills">
       <h3>Lições a aprender</h3>
+
       <ul id="licoes_a_aprender">
         <li>JavaScript</li>
         <li>UI & UX</li>
@@ -62,18 +68,13 @@
         <li>Back-end</li>
       </ul>
     </nav>
+
     <section class="article">
       <article>
         <h2>Sobre meu aprendizado</h2>
         <p>
           <strong>Nada facil!</strong>
-          Na verdade meu aprendizado tem sido muito bom e satisfatório. Quando penso o nível de conhecimento que tinha
-          semanas atrás e comparo com hoje, é grande a diferença. <br> Depois de passar por vários sufocos como reinstalar
-          versões do Linux que sempre “bugavam”, ter que usá-lo sem interface foi desafiador, mas consegui. Talvez se
-          não
-          fosse para estar na Trybe nem teria tentado. <br> Um dos principais motivos que me fez estar aqui é me tirar da
-          zona
-          de conforto, sendo assim, vamos nessa!
+          Na verdade meu aprendizado tem sido muito bom e satisfatório. Quando penso o nível de conhecimento que tinha semanas atrás e comparo com hoje, é grande a diferença. Depois de passar por vários sufocos como reinstalar versões do Linux que sempre “bugavam”, ter que usá-lo sem interface foi desafiador, mas consegui. Talvez se não fosse para estar na Trybe nem teria tentado. Um dos principais motivos que me fez estar aqui é me tirar da zona de conforto, sendo assim, vamos nessa!
         </p>
       </article>
     </section>
@@ -81,15 +82,11 @@
     <section class="article">
       <aside>
         <h2>Uma passagem do meu aprendizado</h2>
-        <p>
-          Uma passagem tensa e ao mesmo tempo engraçada foi quando não conseguia entender como funcionava o Git e
-          GitHub.
-          Foi um desespero tão grande que não dormir por 2 noites até aprender como funcionava esse negócio sô!
-        </p>
+        <p>Uma passagem tensa e ao mesmo tempo engraçada foi quando não conseguia entender como funcionava o Git e GitHub. Foi um desespero tão grande que não dormir por 2 noites até aprender como funcionava esse negócio sô!</p>
       </aside>
     </section>
+
   </section>
-  <section>
 
     <footer id="rodape">
       Compilado por: <a target="_blank" href="https://www.linkedin.com/in/devsfelipesantiago/">Felipe Santiago</a>
