adcinando minha foto

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <header id="cabecalho"><h1 id="titulo">Tudo que eu aprendir</h1></header>
+        <img id="minha_foto" src="foto/foto-hudson.jpg" alt="foto de hudson carlos no shopping" width="500px">
     </body>
 </html>
