--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
           <h2>Meu aprendizado na Trybe</h2>
           <article id="article">
             <p>Estou a pouco tempo , porém o curso é muito bom. Oferencedo uma excelente didática
-              professores que sabem dar uma aula acima da espectativa. Com isso o aprendizado se torna
-              agradável e com progressos significativos. Com menos de um mês já estou fazendo o meu primeiro
-              projeto. Espero em breve ser um excelente Dev FullStack.
+              professores que sabem dar uma aula acima da espectativa.
             </p>
           </article>
         </section>
@@ -59,10 +57,7 @@
           <h2>Uma passagem sobre o meu aprendizado</h2>
           <aside id="aside">
             <p>Estou aprendendo tantas coisas que fica até difícil definir uma.
-              A passagem que chama a minha atenção é sobre as soft skills de inteligência emocial,
-              pois quando mais eu souber sobre mim melhor pessoa serei. Sabendo disso, terei uma gama
-              de expertise para lidar nos momentos de pressão em uma empresa.
-            </p>
+              A passagem que chama a minha atenção é sobre as soft skills de inteligência emocial.
           </aside>
         </section>
       </main>
