--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
     <title>Lessons Learned</title>
 </head>
 <body>
-    <header>
-        <div id="cabecalho">
+    <header id="cabecalho">
+        <div id="barra">
             <h1 class="colchete">{</h1>
         <h1 id="titulo">Lessons Learned</h1>
         <h1 class="colchete">}</h1>
         <nav>
             <ul>
                 <li class="menusuperior"><a href=#meuaprendizado>Meu aprendizado</a></li>
-                <li class="menusuperior"><a href=#licoesaprendidas>Lições Aprendidas</a></li>
-                <li class="menusuperior"><a href=#queroaprender>Quero aprender</a></li>
+                <li class="menusuperior"><a href=#aprendizado>Aprendizado</a></li>
+                <li class="menusuperior"><a href=#oquevemporai>O que vem por aí...</a></li>
             </ul>
         </nav>
         </div>
     </header>
     <img id="minha_foto" src="minhafoto.jpg" alt= "foto de perfil">
 
-   <a target="_blank" href="https://github.com/fcbresende">Minha Página github</a>
+   
     <article>
         <h2> Meu Aprendizado</h2>
         <p>nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit amet risus nullam eget felis eget nunc lobortis mattis aliquam faucibus purus in massa tempor nec feugiat nisl pretium fusce id velit ut tortor pretium viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed viverra tellus in hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue </p>
@@ -34,37 +34,65 @@
         <h3>A entrevista</h3>
         <p>nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit amet risus nullam eget felis eget nunc lobortis mattis aliquam faucibus purus in massa tempor nec feugiat nisl pretium fusce id velit ut tortor pretium </p>
     </aside>
+    <div>
     <section id="esquerda">
         <h2>Lições Aprendidas</h2>
     <ol id="licoes_aprendidas">
-        <li>lorem</li>
-        <li>ipsum</li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Git</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Inteligência Emocional</li>
+        <li>Funcionamento da Web</li>
+        <li>Funcionamento do zoom</li>
+        <li>Funcionamento do Slack</li>
+        <li>BASH</li>
+        <li>VS Code</li>
+        <li>Linux</li>
     </ol>
     </section>
     <section id="direita">
         <h2>Lições à aprender</h2>
     <ul id="licoes_a_aprender">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>SQL</li>
+        <li>Soft Skills</li>
+        <li>SCRUM</li>
+        <li>Javascript</li>
+        <li>Node.js</li>
+        <li>SQL</li>
+        <li>Fundamentos de Back-end</li>
+        <li>Estrutura de dados</li>
+        <li>Git avançado</li>
+        <li>Reack/li>
     </ul>
     </section>
+    </div>
+    <section>
+        <h2> O que vem por aí...</h2>
+        <table>
+            <tr>
+               <td>Fundamentos do desenvolvimento Web</td>
+               <td>Cursando</td>
+            </tr>
+            <tr>
+                <td>Desenvolvimento Front-End</td>
+                <td>Aguardando</td>
+             </tr>
+             <tr>
+                <td>Desenvolvimento Back-end</td>
+                <td>Aguardando</td>
+             </tr> 
+             <tr>
+                <td>Ciência da Computação</td>
+                <td>Aguardando</td>
+             </tr>
+             <tr>
+                <td>Soft Skills</td>
+                <td>Cursando</td>
+             </tr>
+        </table>
+    </section>
     <footer id="rodape">
-        <p>Projeto integrante do curso de Desenvolvimento Web da Trybe, iniciado em NOV/20 - Turma 09.</p>
+        <p>Projeto integrante do curso de Desenvolvimento Web da Trybe, iniciado em NOV/20 - Turma 09.
+            <a target="_blank" href="https://github.com/fcbresende">Minha Página github</a></p>
     </footer>
 </html>
