--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="imagens/toselli.jpg" width="160px" alt="Foto de Pedro Toselli" id="minha_foto">
         <div class="listas">
             <div class="tabela">
-                <table border="3">
+                <table>
                     <tr>
                         <td>Nome</td>
                         <td>Idade</td>
