--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
             <section>
                 <div id="hero-card">
                   <img id="minha_foto" src="img/hero.jpeg" alt="hero">
-                  <p>Oi, eu sou o Lucas</p>
+                  <p> Lucas Silva</p>
+                  <div id="card-links">
+                    <ul id="card-list">
+                        <li><a href="https://github.com/LucasSilvaMarts" target="_blank"><img src="img/github.svg" width="30px" alt="github"></a></li>
+                        <li><a href="#"><img src="img/linkedin.svg" target="_blank" width="30px" alt="github"></a></li>
+                        <li><a href="https://twitter.com/DevSMarts" target="_blank"><img src="img/twitter.svg" width="30px" alt="github"></a></li>
+                    </ul>
+                  </div>
                 </div>
             </section>
 
