--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <article>
             <div class="aprendizado">
                 <h1>Meu aprendizado ate aqui</h1>
-                <p>Sei que estou no começo ainda, e sei também que já aprendi mais do que semana passada, <br> mas ainda fico chateado em saber que ainda nao consigo nem sequer alinhar uma coluna lado a lado, enquanto meus colegas ja fizeram templates absurdos. O que mais me deixa feliz é que estou tendo a oportunidade de melhorar sempre.</p>
+                <p>Sei que estou no começo ainda, e sei também que já aprendi mais do que semana passada, <br> mas ainda fico chateado em saber que ainda nao consigo nem sequer alinhar uma coluna lado a lado, enquanto meus colegas ja fizeram templates absurdos. <br> O que mais me deixa feliz é que estou tendo a oportunidade de melhorar sempre.</p>
             </div>
         </article>
             <aside>
