Corrigindo issues do Code Climate

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
     </section>
     <hr>
     <article class="aprendizado">
-      <section class="lado-esquerdo">
+      <div class="lado-esquerdo">
         <h3>O aprendizado na Trybe</h3>
         <p>
           Poder aprender a programar com a Trybe é sem sombra de dúvidas a melhor opção que um estudante pode ter. Tenho certeza que o comprometimento da Trybe ao fornecer as melhores práticas de ensino direcionadas para o mercado de trabalho é um dos fatores que mais vão influenciar no meu sucesso como aluno e posteriormente como um desenvolvedor.
         </p>
-      </section>
+      </div>
       <aside class="lado-direito">
         <h3>Uma passagem sobre meu aprendizado</h3>
         <p>
